--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dependencies": {
         "@loopback/boot": "^1.4.0",
         "@loopback/context": "^1.19.0",
-        "@loopback/core": "^1.8.1"
+        "@loopback/core": "^1.8.1",
+        "@loopback/rest": "^1.15.0"
     },
     "devDependencies": {
         "@loopback/build": "^1.7.1",
