feat: add new models, repositories, relations

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -35,7 +34,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-package-lock.json
 
 # Typescript v1 declaration files
 typings/
@@ -58,8 +56,9 @@ typings/
 # dotenv environment variables file
 .env
 
-# Generated apidocs
-api-docs/
-
 # Transpiled JavaScript files from Typescript
 /dist
+/build
+
+# Cache used by TypeScript's incremental build
+*.tsbuildinfo
