--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "$schema": "http://json.schemastore.org/tsconfig",
     "extends": "@loopback/build/config/tsconfig.common.json",
     "compilerOptions": {
+        "outDir": "build",
         "rootDir": "src"
     },
     "include": ["src"]
