test: add empty test

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "loopback-authorization-extension",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "HRBAC, MAC, DAC access models, generic implementation for Loopback v4",
     "keywords": [
         "loopback-extension",
@@ -42,9 +42,12 @@
     },
     "devDependencies": {
         "@loopback/build": "^2.0.6",
-        "source-map-support": "^0.5.13",
         "@loopback/testlab": "^1.7.2",
+        "@types/jest": "^24.0.17",
         "@types/node": "^10.14.14",
+        "jest": "^24.8.0",
+        "source-map-support": "^0.5.13",
+        "ts-jest": "^24.0.2",
         "typescript": "~3.5.3"
     }
 }
