--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "prepublishOnly": "npm run test"
     },
     "repository": {
-        "type": "git"
+        "type": "git",
+        "url": "https://github.com/strongloop/loopback-authorization-extension"
     },
     "author": "KoLiBer",
     "license": "MIT",
@@ -38,7 +39,6 @@
         "@loopback/core": "^1.10.6",
         "@loopback/repository": "^1.15.3",
         "@loopback/rest": "^1.22.0",
-        "loopback-connector-mysql": "^5.4.2",
         "loopback-history-extension": "latest"
     },
     "devDependencies": {
