--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@loopback/core": "^1.10.6",
         "@loopback/repository": "^1.15.3",
         "@loopback/rest": "^1.22.0",
+        "@loopback/service-proxy": "^1.3.12",
         "loopback-history-extension": "latest",
         "module-alias": "^2.2.2"
     },
