fix: change absolute to relative path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,7 @@
     "compilerOptions": {
         "outDir": "build",
         "rootDir": "src",
-        "moduleResolution": "node",
-        "baseUrl": "./",
-        "paths": {
-            "*": ["types/*"],
-            "@authorization/*": ["src/*"]
-        }
+        "baseUrl": "./"
     },
     "include": ["src"]
 }
