--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
         "@loopback/repository": "^1.15.3",
         "@loopback/rest": "^1.22.0",
         "@loopback/service-proxy": "^1.3.12",
-        "loopback-history-extension": "latest",
-        "module-alias": "^2.2.2"
+        "loopback-history-extension": "latest"
     },
     "devDependencies": {
         "@loopback/build": "^2.0.15",
@@ -49,8 +48,5 @@
         "@types/node": "^10.17.0",
         "source-map-support": "^0.5.16",
         "typescript": "~3.5.3"
-    },
-    "_moduleAliases": {
-        "@authorization": "./build"
     }
 }
