feat: change tsconfig add absolute path ~

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "compilerOptions": {
         "outDir": "build",
         "rootDir": "src",
-        "baseUrl": "./"
+        "baseUrl": ".",
+        "paths": {
+            "~*": ["./src/*"]
+        }
     },
     "include": ["src"]
 }
