feat: add module alias home path resolver

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "$schema": "http://json.schemastore.org/tsconfig",
     "extends": "@loopback/build/config/tsconfig.common.json",
     "compilerOptions": {
-        "outDir": "build/typings",
+        "outDir": "dist",
         "rootDir": "src",
         "baseUrl": ".",
         "paths": {
