--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
         "node": ">=8.9"
     },
     "scripts": {
-        "start": "nodemon index.ts --exec ts-node",
-        "prebuild": "lb-tsc --outDir build/typings",
-        "build": "parcel build --out-dir build --cache-dir build/cache --target node build/typings/index.js",
-        "postbuild": "lb-clean build/cache",
+        "clean": "lb-clean dist build *.tsbuildinfo",
+        "prebuild": "npm run clean",
+        "build": "lb-tsc --outDir dist",
+        "postbuild": "parcel build --out-dir build --cache-dir build/cache --target node dist/index.js",
+        "start": "nodemon --exec ts-node index.ts",
         "test": "lb-mocha --allow-console-logs \"test/**/*.test.ts\"",
-        "clean": "lb-clean build",
         "prepublishOnly": "npm run build"
     },
     "repository": {
@@ -26,24 +26,24 @@
     "author": "KoLiBer",
     "license": "MIT",
     "files": [
-        "build",
-        "index.d.ts",
+        "README.md",
         "index.js",
-        "README.md"
+        "index.d.ts",
+        "dist"
     ],
     "dependencies": {
-        "@loopback/boot": "^1.5.10",
-        "@loopback/context": "^1.23.4",
-        "@loopback/core": "^1.10.6",
-        "@loopback/repository": "^1.15.3",
-        "@loopback/rest": "^1.22.0",
-        "@loopback/service-proxy": "^1.3.12",
+        "@loopback/boot": "^1.5.12",
+        "@loopback/context": "^1.24.0",
+        "@loopback/core": "^1.11.0",
+        "@loopback/repository": "^1.15.5",
+        "@loopback/rest": "^1.24.0",
         "loopback-history-extension": "latest"
     },
     "devDependencies": {
-        "@loopback/build": "^2.0.15",
-        "@loopback/testlab": "^1.9.3",
-        "@types/node": "^10.17.0",
+        "@loopback/build": "^2.1.0",
+        "@loopback/testlab": "^1.9.5",
+        "@types/node": "^10.17.6",
+        "module-alias": "^2.2.2",
         "nodemon": "^2.0.1",
         "parcel-bundler": "^1.12.4",
         "source-map-support": "^0.5.16",
