--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
         "@loopback/core": "^1.11.0",
         "@loopback/repository": "^1.15.5",
         "@loopback/rest": "^1.24.0",
-        "loopback-history-extension": "latest",
-        "module-alias": "^2.2.2"
+        "better-module-alias": "^1.0.4",
+        "loopback-history-extension": "latest"
     },
     "devDependencies": {
         "@loopback/build": "^2.1.0",
