--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-package-log.json
+package-lock.json
 
 # Typescript v1 declaration files
 typings/
