--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
     "extends": "@loopback/build/config/tsconfig.common.json",
     "compilerOptions": {
         "outDir": "dist",
-        "rootDir": "src",
-        "baseUrl": ".",
-        "paths": {
-            "~*": ["./src/*"]
-        }
+        "rootDir": "src"
     },
     "include": ["src"]
 }
